data/derived/comb/progs/unify/prog6046.ml.out
Characters 189-190:
  else (0,a::((fst x + snd x + a) mod 10)::t::t)
                                           ^
Error: This expression has type int list
       but an expression was expected of type int
